@@ -15,9 +15,3 @@ Usage
 
 Plone Help Center has inline documentation, just add a help center.
 
-Upgrades
-========
-
-If you are upgrading a Plone site with an existing help center from a
-version prior to 3.0, you *must* run the upgrade profile. In the ZMI,
-go to portal_setup and use the upgrades tab.
